ingress-demo/multiple-paths-ingress1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-multi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myweb.com
    http:
      paths:
      - path: /speaker
        backend:
          serviceName: speaker-service
          servicePort: 3000
      - path: /listener
        backend:
          serviceName: listener-service
          servicePort: 8080
      - path: /analytics
        backend:
          serviceName: analytics-service
          servicePort: 8000
